upgraded to Java 24